Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9736

Two additional failures in kernel32_winetest:virtual after switching to MiGetFileObjectForSectionAddress

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • NTCore

    Description

      r67810 (Implement MiGetFileObjectForSectionAddress) causes two notable changes in tests:

      Full diff: https://reactos.org/sites/all/modules/reactos/testman/compare.php?ids=37230,37232

      Attachments

        Activity

          People

            ThePhysicist Timo Kreuzer
            ThFabba ThFabba
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: