[NTOSKRNL] - Set VadType = VadImageMap for image section mappings - Rewrite MmGetFileNameForAddress and NtAreMappedFilesTheSame. Take into account that the first address must be an image section mapping - Fixes a few kernel32_winetest:virtual tests CORE-9736 #resolve

svn path=/trunk/; revision=68123